--- a/src/app/components/test-case-test/test-case.component.scss
+++ b/src/app/components/test-case-test/test-case.component.scss
@@ -1,26 +1,3 @@
-:root {
-  --bg-color: #ffffff;
-  --text-color: #333;
-  --link-color: #4d93fd;
-  --border-color: rgba(0, 0, 0, 0.25);
-  --header-bg-color: #ffffff;
-  --footer-bg-color: #f8f9fa;
-  --test-bg-color: #aeaeae;
-  --test-header-bg-color: #ffffff;
-  --progress-color: #8fbe48;
-}
-
-.dark-theme {
-  --bg-color: #121212;
-  --text-color: #f9f9f9;
-  --link-color: #88C4E4;
-  --border-color: rgba(255, 255, 255, 0.25);
-  --header-bg-color: #333333;
-  --footer-bg-color: #222222;
-  --test-bg-color: #333333;
-  --test-header-bg-color: #424242;
-  --progress-color: #5eba7d;
-}
 
 
 :host ::ng-deep {
