--- a/src/app/components/test-group/test-group.component.scss
+++ b/src/app/components/test-group/test-group.component.scss
@@ -23,7 +23,7 @@
   font-size: 20px; 
   margin-top: 10px;
   margin-bottom: 20px;
-  color: #666;
+  color: var(--text-color);
   max-width: 100%;
   border-bottom: 2px solid #ddd;
   padding-bottom: 10px;
