--- a/src/app/pages/admin/admin-courses/admin-courses.component.scss
+++ b/src/app/pages/admin/admin-courses/admin-courses.component.scss
@@ -1,6 +1,10 @@
 :host ::ng-deep {
   .p-skeleton{
-    background: #DBDBDB;
+    background: var(--btn-hover-bg-color);
+  }
+
+  .mat-icon{
+    color: var(--text-color);
   }
 }
 .skeleton {
@@ -14,7 +18,6 @@
     justify-content: start;
     gap: 10px; 
   }
-  
 
   
     .title {
@@ -55,9 +58,9 @@
     }
 
     .button-icon {
-        width: 30px;
-        height: 30px;
-        font-size: 24px;
+        width: 35px;
+        height: 35px;
+        font-size: 34px;
     }
 
   
