--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
@@ -1,6 +1,6 @@
 :host ::ng-deep {
   .p-skeleton{
-    background: #DBDBDB;
+    background: var(--btn-hover-bg-color);
   }
 }
 
